1998-10-15  Alex Lancaster  <alex@santafe.edu>

	* trigger.xpm, schedule.xpm: Add pixmaps to support ScheduleItem
	widget.

1998-10-06  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (CURRENT): Increment.  Swarm 1.3.1 released.
	(XPMINCLUDES): New subsitituted variable.
	(INCLUDES): Use it.

1998-10-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (XPMFILES): New variable.
	(EXTRA_DIST): Include it.
	
	* TkExtra.m (ensureBltSupportFiles): Check ../BLT/library instead
	of lib.  Quote the value for set of blt_library.

1998-10-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Widget.m (get_geometry_element): Make i unsigned.

	* win32dib.h (dib_paletteIndexForObject): Change "for" to "For".
	
	* win32dib.c (dib_snapshot): Remove i.  Initialize holdPal to
	NULL.  Cast height to int for comparison with return of GetDIBits.
	Don't call SelectObject for holdPal unless it is non-NULL.
	(dib_paletteIndexForObject): Make i unsigned.
	(dib_fill): Cast width, frameWidth, height, and frameHeight to int
	before comparison with x and y.

	* internal.m (tkobjc_animate_message): Likewise.  Remove ps.
	(tkobjc_pixmap_update_raster): Likewise.
	(tkobjc_pixmap_create): Likewise.  Make palette_size unsigned.
	(Xfill): Don't define if _WIN32.
	(tkobjc_raster_erase): Only define private if _WIN32.
	(offset_for_object): Remove.
	(tkobjc_pixmap_save): Move ncolors to a scope closer to where
	it is used.  Cast ncolors to unsigned for ci loop comparision.
	
	* ScheduleItem.m ([ScheduleItem -_createItem_]): Make key a timeval_t.

1998-10-03  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* internal.m (tkobjc_raster_setColormap, tkobjc_raster_clear):
	Move private into _WIN32, since it is only used there; avoid
	warning.
	(check_for_overlaps): Remove rr, rb, and root.
	(tkobjc_pixmap_create_from_widget): Cast address to int *.
	Removed configured.
	(tkobjc_pixmap_create): Remove rc.

	* WindowGeometryRecord.m (getVal): Reverse logic so that routine